Adding image for markdown

--- a/project/analysis/BreastCancerIdentification.ipynb
+++ b/project/analysis/BreastCancerIdentification.ipynb
@@ -4,19 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mammo Cancer cell classification"
+    "## Breast Cancer classification using CNN and Transfer Learning\n",
+    "\n",
+    "- In the United States, breast cancer continues to be the leading cause of cancer death among women of all races. \n",
+    "- Studies have shown that improvement to survival rate over the last decade can be attributed to early diagnosis and awareness of better treatment options.\n",
+    "- Convolutional Neural Networks (ConvNets or CNNs) are a category of Neural Networks that have proven very effective in areas such as image recognition and classification.\n",
+    "- Transfer learning is a machine learning method where a model developed for a task is reused as the starting point for a model on a second task."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\aswat\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "/Users/palakagrawal/anaconda3/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -54,35 +59,55 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/palakagrawal/Desktop/Courses/ADS/agrawal_palak_spring18_ads/project\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Current path is fetched\n",
+    "cur_path = os.path.dirname(os.getcwd())\n",
+    "print(cur_path)\n",
+    "file_path = cur_path + '/data/calc_case_description_train_set.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# read the csv file\n",
-    "skin_df = pd.read_csv('./calc_case_description_train_set.csv')"
+    "skin_df = pd.read_csv(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -239,7 +264,7 @@
        "4  Calc-Training_P_00008_LEFT_CC_1/1.3.6.1.4.1.95...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,6 +272,13 @@
    "source": [
     "#display the head\n",
     "skin_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Developed a one_hot function to classify the breast cancer image data in classes as BENIGN and MALIGNANT **"
    ]
   },
   {
@@ -271,6 +303,13 @@
     "        c=1\n",
     "        return np.eye(2, dtype=float)[c]\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Applied above function to classify data into classes, see column 'encode' **"
    ]
   },
   {
@@ -476,6 +515,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- \n",
+    "** Below method will convert images into matrices of pixels using Open CV library **\n",
+    "- \n",
+    "** Matrices for images and labels will be two things generated from load_train method **"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -490,8 +539,7 @@
     "    \n",
     "    images = []\n",
     "    labels = []\n",
-    "    ids = []\n",
-    "    cls = []\n",
+    "    \n",
     "\n",
     "    print('Reading training images')\n",
     "    \n",
@@ -511,6 +559,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-\n",
+    "** Image size for CNN used is 128 and while exeuting Transfer learning same part can changed to 299 for image size **"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -525,14 +581,32 @@
    ],
    "source": [
     "#loading the images\n",
-    "images, labels = load_train(299)"
+    "images, labels = load_train(128)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convolutional neural network"
+    "## Convolutional Neural Network\n",
+    "\n",
+    "- Below four operations are main executed in ConvNet\n",
+    "    - Convolution\n",
+    "    - Non Linearity (ReLU)\n",
+    "    - Pooling or Sub Sampling\n",
+    "    - Classification (Fully Connected Layer)\n",
+    "\n",
+    "- ConvNets derive their name from the “convolution” operator. \n",
+    "- The primary purpose of Convolution in case of a ConvNet is to extract features from the input image. Convolution preserves the spatial relationship between pixels by learning image features using small squares of input data.\n",
+    "\n",
+    "\n",
+    "- In CNN terminology, the 3×3 matrix is called a ‘filter‘ or ‘kernel’ or ‘feature detector’ and the matrix formed by sliding the filter over the image and computing the dot product is called the ‘Convolved Feature’ or ‘Activation Map’ or the ‘Feature Map‘. \n",
+    "- It is important to note that filters acts as feature detectors from the original input image.\n",
+    "- Different operations can be performed such as Edge Detection, Sharpen and Blur just by changing the numeric values of our filter matrix before the convolution operation\n",
+    "- The more number of filters we have, the more image features get extracted and the better our network becomes at recognizing patterns in unseen images.\n",
+    "\n",
+    "\n",
+    "- Below 4 layers are used out of which 4th is fully connected layer"
    ]
   },
   {
@@ -608,7 +682,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convolution and Pooling"
+    "## Convolution and Pooling\n",
+    "\n",
+    "- Introducing Non-linearity\n",
+    "    - ReLU stands for Rectified Linear Unit and is a non-linear operation.\n",
+    "    - ReLU is an element wise operation (applied per pixel) and replaces all negative pixel values in the feature map by zero. \n",
+    "    - The purpose of ReLU is to introduce non-linearity in our ConvNet, since most of the real-world data we would want our ConvNet to learn would be non-linear\n",
+    "    - Other non linear functions such as tanh or sigmoid can also be used instead of ReLU, but ReLU has been found to perform better in most situations.\n",
+    "    \n",
+    "    \n",
+    "- Pooling Step\n",
+    "    - Spatial Pooling (also called subsampling or downsampling) reduces the dimensionality of each feature map but retains the most important information.\n",
+    "    - In case of Max Pooling, we define a spatial neighborhood (for example, a 2×2 window) and take the largest element from the rectified feature map within that window. \n",
+    "    - Instead of taking the largest element we could also take the average (Average Pooling) or sum of all elements in that window. \n",
+    "    - In practice, Max Pooling has been shown to work better.\n",
+    "    - Thus, we slide our 2 x 2 window by 2 cells (also called ‘stride’) and take the maximum value in each region.\n",
+    "    \n",
+    "![alt text](https://github.com/palakagrawal912/agrawal_palak_spring18_ads/tree/master/project/raw_images/pooling.png \"\")"
    ]
   },
   {
@@ -913,7 +1003,7 @@
     }
    ],
    "source": [
-    "images, labels, ids, cls = load_train(299)"
+    "images, labels, ids, cls = load_train(128)"
    ]
   },
   {
@@ -987,7 +1077,7 @@
     "        x_batch,y_batch = next_batch(32,X_train,Y_train)\n",
     "        if i % 100 == 0:\n",
     "            train_accuracy = accuracy.eval(feed_dict={\n",
-    "              x: x_batch.reshape(-1,49152), y_: y_batch, keep_prob: 1.0})\n",
+    "              x: x_batch.reshape(-1,49152), y_: y_batch, keep_prob: 0.7})\n",
     "            print('step %d, training accuracy %g' % (i, train_accuracy))\n",
     "        train_step.run(feed_dict={x: x_batch.reshape(-1,49152), y_: y_batch, keep_prob: 0.5})\n",
     "\n",
@@ -1084,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -1095,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1106,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1204,9 @@
      "output_type": "stream",
      "text": [
       "Downloading Inception v3 Model ...\n",
-      "Data has apparently already been downloaded and unpacked.\n"
+      "- Download progress: 100.0%\n",
+      "Download finished. Extracting files.\n",
+      "Done.\n"
      ]
     }
    ],
@@ -1124,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -1356,8 +1448,8 @@
    },
    "outputs": [],
    "source": [
-    "W_fc3 = weight_variable([128, 3])\n",
-    "b_fc3 = bias_variable([3])\n",
+    "W_fc3 = weight_variable([128, 1])\n",
+    "b_fc3 = bias_variable([1])\n",
     "\n",
     "y_conv = tf.matmul(h_fc2_drop, W_fc3) + b_fc3"
    ]
