--- a/project/analysis/ConvertDICOMToJPEG.ipynb
+++ b/project/analysis/ConvertDICOMToJPEG.ipynb
@@ -46,12 +46,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Fetching current path"
+    "#### Fetching current path\n",
+    "\n",
+    "** Note: DICOM images are taken from hard disk, connect HD before running this script **"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,13 +186,24 @@
        "0  /Volumes/easystore/cancer/CalcImg/DOI/Calc-Tra...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mass_case_frame.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mass_case_frame['ImagePath'] = ''"
    ]
   },
   {
@@ -209,10 +222,11 @@
    "outputs": [],
    "source": [
     "def dicom_jpeg(mass_case_frame):\n",
-    "    for index in range(1203,len(mass_case_frame['ImageFilePath'])):\n",
+    "    for index in range(0,len(mass_case_frame['ImageFilePath'])):\n",
     "        ds = dicom.read_file(mass_case_frame['ImageFilePath'][index])\n",
     "        print(mass_case_frame['ImageFilePath'][index])\n",
     "        filename = cur_path + '/assignment3/outcome/Calc_Data/' + str(index) + '.jpg'\n",
+    "        mass_case_frame['ImagePath'] = filename\n",
     "        scipy.misc.imsave(filename, ds.pixel_array)"
    ]
   },
@@ -226,6 +240,15 @@
    "source": [
     "#calling the function\n",
     "dicom_jpeg(mass_case_frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mass_case_frame.to_csv(cur_path +'/data/calc_case_description_train_set.csv', header=True,mode='w')"
    ]
   },
   {
